# glom

./: README.md  pyproject.toml
scripts/: parity_check.sh
src/glom/: __main__.py  _compact.py  cli.py  db.py  indexer.py
tests/: test_cli.py  test_db.py  test_indexer.py
